# backend/java/housedb-parent/housedb-transport-jetty/src/main/java/com/rafex/housedb/dtos/CreateMetadataTemplateRequest.java
@@ -1,0 +1,11 @@
+package com.rafex.housedb.dtos;
+
+public record CreateMetadataTemplateRequest(
+        String metadataTarget,
+        String code,
+        String name,
+        String description,
+        String definitionJson,
+        Boolean enabled
+) {
+}
